<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/feedback_desc_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/feedback_desc"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/feedback_content_et"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_below="@+id/feedback_desc_tv"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_white_corner"
        android:gravity="top"
        android:padding="16dp"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/feedback_content_et"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_white_corner"
        android:divider="@drawable/shape_divide_gray"
        android:minHeight="60dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:showDividers="middle">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingEnd="6dp"
            android:paddingRight="6dp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/option"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/feedback_submit"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:background="@drawable/selector_recommend"
        android:gravity="center"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="20sp"

        />
</RelativeLayout>
