<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/bg_gray"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_white_corner"
        android:divider="@drawable/shape_divide_gray"
        android:orientation="horizontal"
        android:padding="10dp"
        android:showDividers="middle">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/coin_name"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/coin_name_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:background="@color/transparent"
            android:layout_gravity="center_vertical"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_white_corner"
        android:divider="@drawable/shape_divide_gray"
        android:orientation="horizontal"
        android:padding="10dp"
        android:showDividers="middle">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/invite_url"
            android:textColor="@color/black"
            android:textSize="18sp"

            />

        <EditText
            android:id="@+id/coin_url_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textUri"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:background="@color/transparent"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_white_corner"
        android:divider="@drawable/shape_divide_gray"
        android:orientation="horizontal"
        android:padding="10dp"
        android:minHeight="160dp"
        android:showDividers="middle">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/coin_description"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_gravity="top"
            />

        <EditText
            android:id="@+id/coin_description_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textUri"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:background="@color/transparent"
            android:gravity="top"

            />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/coin_recommend_tv"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/selector_recommend"
            android:gravity="center"
            android:text="@string/recommend_submit"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </FrameLayout>

</LinearLayout>
