<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/about_top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingTop="100dp">

        <ImageView
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/app_name"
            android:textColor="#c0000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/about_us_version_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#c0000000"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewVersion"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/selector_setting_item"
            android:gravity="center"
            android:text="@string/about_us_check_for_update"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/color_gray_light" />

        <TextView
            android:id="@+id/privacy_tv"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/selector_setting_item"
            android:gravity="center"
            android:text="@string/privacy_policy"
            android:textColor="@color/black_80"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            style="@style/actionStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/info_item_height"
            android:gravity="center_vertical"
            android:text="服务微信：toolmaster9527"
            android:textIsSelectable="true" />

        <TextView
            style="@style/actionStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/info_item_height"
            android:gravity="center_vertical"
            android:text="交流Q群：706220324"
            android:textIsSelectable="true" />

    </LinearLayout>

</LinearLayout>
